# DHCP-Network-Simulator

./: CMakeLists.txt  Dockerfile  README.md  build.sh  dhcp_pyrelay.py  dhcp_simulator.py  kea_server_setup.sh  run_e2e_tests.sh  setup_kea.sh
conf/: blue-kea-dhcp4.conf  blue-kea-dhcp6.conf  red-kea-dhcp4.conf  red-kea-dhcp6.conf
src/: dhcp_client.c  dhcp_crafter.h  dhcp_protocol.h  dhcp_protocol_v4.c  dhcp_protocol_v6.c  main.c  netns_manager.c  netns_manager.h
